corrected alignment

--- a/client/src/components/GasPriceItem.scss
+++ b/client/src/components/GasPriceItem.scss
@@ -6,7 +6,7 @@
   width: 40rem;
   height: 12rem;
   justify-content: space-evenly;
-  margin-left: 30rem;
+  margin-left: 25rem;
   margin-right: 30rem;
   margin-top: 2rem;
   border-radius: 1rem;
